added configs to /etc/default